notes/figures: Reworked how I maintain this list, trying out sc

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -149,147 +149,121 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
-	[ 'p186', '94494', 'good smile miku nendoroid #33 (2008)' ],
+	[ 'p186', '94494', 'good smile miku nendoroid #033 (2008)' ],
 	[ 'p1656', 'ca554', 'good smile hachune miku nendoroid #042 (2008)' ],
-	[ 'p1009', '633df', 'good smile kagamine len nendoroid #40' ],
-	[ 'p1008', 'cbcc1', 'good smile kagamine rin nendoroid #39' ],
-	[ 'p117503', 'e371a', 'good smile mikudayo nendoroid #299' ],
-
-	[ 'p23566', '8126f', 'volks moekore plus #03.9 miku encore 1/6 scale' ],
-	[ 'p331720', '1ff7c', 'good smile project diva ha2ne miku co-de' ],
+	[ 'p1009', '633df', 'good smile kagamine len nendoroid #040 (2008)' ],
+	[ 'p1008', 'cbcc1', 'good smile kagamine rin nendoroid #039 (2008)' ],
+	[ 'p117503', 'e371a', 'good smile mikudayo nendoroid #299 (2013)' ],
+	[ 'p23566', '8126f', 'volks moekore plus miku encore #03.9 1/6 scale (2010)' ],
+	[ 'p331720', '1ff7c', 'good smile project diva ha2ne miku nendoroid co-de (2016)' ],
 	[ 'p22229', 'e58da', 'sega hatsune miku PM figure (2010)' ],
 	[ 'p266283', 'f0162', 'taito hatsune miku mamama style api miku (2015)' ],
-	[ 'p12037', 'bbc47', 'max factory miku live stage wonfes 2009 ver. figma #EX-003' ],
-	[ 'p153162', '8abda', 'good smile snow miku 2014 nendoroid #380' ],
-	[ 'p5737', '2e05d', 'good smile kagami hiiragi lucky star OVA nendoroid #062' ],
-	[ 'p59755', '4a5b2', 'max factory miku append figma #100' ],
-	[ 'p78582', '5dc32', 'good smike miku append nendoroid #194' ],
-	[ 'p757554', '0b003', 'good smile miku cheerful ver. nendoroid #1001' ],
+	[ 'p12037', 'bbc47', 'max factory miku live stage ver. (wonfes 2009) figma #EX-003 (2009)' ],
+	[ 'p153162', '8abda', 'good smile snow miku 2014 rabbit yukine nendoroid #380 (2014)' ],
+	[ 'p5737', '2e05d', 'good smile kagami hiiragi MikkuMiku lucky star OVA nendoroid #062 (2009)' ],
+	[ 'p59755', '4a5b2', 'max factory hatsune miku append figma #100 (2011)' ],
+	[ 'p78582', '5dc32', 'good smile hatsune miku append nendoroid #194 (2012)' ],
+	[ 'p757554', '0b003', 'good smile miku cheerful ver. nendoroid #1001 (2011)' ],
 	[ 'p287701', 'ad644', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
-	[ 'p41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129' ],
-
-/* from cancelled suruga-ya order 2023/7/26
-	[ 'p104300', '65180', 'good smile sakura miku nendoroid #274' ],
-	[ 'p1251028', '79b76', 'bandai q posket sakura miku type a' ],
-*/
-	[ '861021', 'c00c8', 'sega miku preciality special nuigurumi (fuwafuwa mega jumbo) plush' ],
-	[ 'p1849001', '3fba5', 'gift hatsune miku nt fumo plush' ],
-	[ 'p1876348', '49ca1', 'good smile miku 16th birthday ~dear creators~ nendoroid #2222' ],
-
+	[ 'p41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129 (2011)' ],
+	[ '861021', 'c00c8', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
+	[ 'p1849001', '3fba5', 'gift hatsune miku nt fumo plush (2023)' ],
+	[ 'p1876348', '49ca1', 'good smile miku 16th birthday ~dear creators~ nendoroid #2222 (2023)' ],
 	[ 'p1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
-	[ 'p1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale' ],
-	[ 'p926772', '68615', 'good smile racing miku 2020 nendoroid #1293' ],
-	[ 'p1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize' ],
-	[ 'p998275', 'e47b6', 'taito miku 3rd season autumn ver.' ],
-	[ 'p144335', '72a4a', 'max factory figma miku 2.0 #200' ],
-	[ 'p604387', '623bc', 'good smile miku 10th anniv. ver. nendoroid #831' ],
+	[ 'p1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale (2022)' ],
+	[ 'p926772', '68615', 'good smile racing miku 2020 nendoroid #1293 (2020)' ],
+	[ 'p1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
+	[ 'p998275', 'e47b6', 'taito miku 3rd season autumn ver. (2020)' ],
+	[ 'p144335', '72a4a', 'max factory figma miku 2.0 #200 (2013)' ],
+	[ 'p604387', '623bc', 'good smile miku 10th anniv. ver. nendoroid #831 (2018)' ],
 	[ 'p12040', '74b0d', 'good smile hatsune miku CM ver. 1/8 scale (2009)' ],
 	[ 'p29253', '8664a', 'max factory miku tony ver. 1/7 scale (2011)' ],
 	[ 'p186', '94494', 'good smile miku nendoroid #33 (2008)' ],
 	[ 'p136444', '8be06', 'good smile miku 2.0 nendoroid #300 (2013)' ],
-	[ 'p61333', '3b529', 'good smile miku 1/8 scale lat-type ver.' ],
-	[ 'p548722', '507c3', 'good smile hatsune miku v4x 1/8 scale' ],
+	[ 'p61333', '3b529', 'good smile miku 1/8 scale lat-type ver. (2011)' ],
+	[ 'p548722', '507c3', 'good smile hatsune miku v4x 1/8 scale (2018)' ],
 	[ 'p187', '7888c', 'good smile hatsune miku 1/8 scale (2008)' ],
-
-	[ 'p546853', 'be182', 'bandai figure-rise bust miku model kit' ],
-	[ 'p1875244', '2f1ce', 'furyu noodle stopper miku autumn date' ],
-	[ 'p1840070', 'c98a3', 'good smile needy girl overdose kangel nendoroid #2201' ],
-
-	[ '289034', '83d4b', 'sega infinity module miku SPM' ],
-	[ '1370076', '897d0', 'furyu bicute bunnies miku street ver.' ],
-	[ '1210391', 'ebe3e', 'furyu bicute bunnies miku white bunny pearl ver.' ],
-	[ '1419501', '06f2e', 'good smile racing miku 2022 nendoroid #1839' ],
-	[ '1503807', '58c20', 'good smile magical mirai 2021 miku nendoroid #1940' ],
-	[ '1407723', 'd9878', 'taito big nuigurumi miku winter ver. (type B)' ],
-	[ '1635003', 'ca57b', 'taito wonderland puss in boots miku' ],
+	[ 'p546853', 'be182', 'bandai figure-rise bust miku model kit (2017)' ],
+	[ 'p1875244', '2f1ce', 'furyu noodle stopper miku autumn date (2023)' ],
+	[ 'p1840070', 'c98a3', 'good smile needy girl overdose kangel nendoroid #2201 (2023)' ],
+	[ '289034', '83d4b', 'sega project diva arcade miku infinity module SPM (2015)' ],
+	[ '1370076', '897d0', 'furyu bicute bunnies miku street ver. (2022)' ],
+	[ '1210391', 'ebe3e', 'furyu bicute bunnies miku white bunny pearl ver. (2022)' ],
+	[ '1419501', '06f2e', 'good smile racing miku 2022 nendoroid #1839 (2022)' ],
+	[ '1503807', '58c20', 'good smile magical mirai 2021 miku nendoroid #1940 (2022)' ],
+	[ '1407723', 'd9878', 'taito big nuigurumi miku winter ver. (type B) (2021)' ],
+	[ '1635003', 'ca57b', 'taito wonderland puss in boots miku (2023)' ],
 	[ '36788', '5b203', 'sega kagamine len EX figure (2010)' ],
-	[ '1495055', 'eda04', 'bandai q posket miku v4x type a' ],
-	[ '1796930', '5b192', 'max limited yurayura head miku nt' ],
-	[ '1796928', '82839', 'max limited yurayura head miku' ],
-
-	[ 'p1473760', 'fe3fe', 'good smile inugami korone nendoroid #1861' ],
-	[ 'p1473759', '82d19', 'good smile nekomata okayu nendoroid #1860' ],
-	[ 'p1782785', '17fdb', 'furyu exc∞d creative miku cyber future ver.' ],
-	[ 'p1618453', 'f7702', 'good smile pop up parade needy girl overdose kangel' ],
-	[ 'p1780064', 'bf4ff', 'taito miku artist masterpiece birthday 2023 ver.' ],
-	[ 'p1873722', '8bef1', 'taito miku fashion figure uniform ver.' ],
-	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper' ],
-	[ 'p945860', '328b2', 'good smile miku nendoroid doll' ],
-	[ '1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll' ],
-	[ '1616455', '1154b', 'good smile pop up parade DECO*27 vampire miku ver. L' ],
-	[ 'p1779734', '8e024', 'taito miku fashion figure subculture ver.' ],
-
-	[ '1335582', '0d57a', 'sega sakura miku v3 SPM' ],
-	[ '1571286', '62065', 'sega miku christmas 2022 SPM' ],
-	[ '1479579', '350f9', 'sega miku 15th anniversary kei ver. SPM' ],
-	[ '1549222', '43de2', 'sega miku 15th anniversary zhou ver. SPM' ],
-	[ '1376115', '30a86', 'good smile racing AMG 2021 SUPER GT round 3' ],
-	[ '1275355', '94c12', 'sega preciality special nuigurumi sakura miku' ],
-	[ '1213389', '85cfa', 'good smile genshin impact venti nendoroid #1795' ],
-	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701' ],
-	[ '1662862', '12eb0', 'moeyu miku blanket hoodie' ],
-	[ '1499800', '04668', 'taito miku artist masterpiece latidos 2022 ver.' ],
-	[ '1220581', '696bc', 'taito miku artist masterpiece pricess arabian ver.' ],
-
-	/* this is bloat
-	[ '1536230', 'b1904', 're-ment miku miku ♪ room miniature #1 of 8' ],
-	[ '1536252', 'a8865', 're-ment miku miku ♪ room miniature #2 of 8' ],
-	[ '1536231', '5efb0', 're-ment miku miku ♪ room miniature #3 of 8' ],
-	[ '1536233', '7215f', 're-ment miku miku ♪ room miniature #4 of 8' ],
-	[ '1536234', 'a0238', 're-ment miku miku ♪ room miniature #5 of 8' ],
-	[ '1536236', '07d51', 're-ment miku miku ♪ room miniature #6 of 8' ],
-	[ '1536237', 'aea78', 're-ment miku miku ♪ room miniature #7 of 8' ],
-	[ '1536238', 'a3e5c', 're-ment miku miku ♪ room miniature #8 of 8' ],
-	*/
-
-	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel' ],
-	[ 'x314683', 'e7d29', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
-	[ 'x370088', '27dfa', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
-	[ 'x514129', '00fa6', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
-	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure' ],
-	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014' ],
-
-	[ '401018', 'bfb66', 'sega project diva innocent SPM miku' ],
-	[ '718192', '29017', 'hatsune miku 2nd season Winter ver.' ],
-	[ '1251026', 'e36e0', 'bandai q posket miku type a' ],
-	[ '944728', 'c98b0', 'furyu miku bicute bunnies original ver.' ],
-	[ '1311067', '82a91', 'taito miku artist masterpiece princess alice' ],
-	[ '1141381', 'fe94b', 'taito miku artist masterpiece 14th anniv.' ],
-	[ '1293291', 'c95e9', 'furyu sakura miku noodle stopper' ],
-	[ '886807', '5b4b2', 'taito sakura miku 2020 ver.' ],
-	[ '1216990', '90105', 'racing miku 2021 espresto' ],
-	[ '1035745', 'ba361', "sega mega 39's breathe you SPM miku" ],
-	[ '1112719', '82ba8', 'taito miku big nuigurumi plush' ],
-	[ '756832', 'd4634', 'taito hatsune miku 2nd season Spring ver.' ],
-	[ '776143', '679aa', 'taito hatsune miku 2nd season Summer ver.' ],
-	[ '4741', '3b1b2', 'sega hatsune miku EX figure (2009)' ],
-	[ '1631369', '25b00', 'sega smiling miku nesoberi nuigurumi (strap)' ],
-	[ '798190', 'f61e7', 'sega sakura miku SPM' ],
-	[ '720383', '21905', 'sega fate/extella link astolfo SPM' ],
-	[ '693275', 'f40e6', 'miku mega jumbo nuigurumi plush 2018' ],
-	[ '675904', '1161e', 'good smile gochiusa sxarp nendoroid #929' ],
-	[ '689123', '2750f', 'good smile snow princess miku nendoroid #1000' ],
-	[ '464596', 'd0803', 'good smile konosuba megumin nendoroid #725' ],
-	[ '440687', 'be7e3', 'sega project diva X miku SPM' ],
-	[ '583734', 'ccf32', 'sega izayoi sakuya PM figure' ],
-	[ '200768', '28f48', 'funko pop rocks miku #39' ],
-	[ '246546', '9cbfc', 'sega project diva F2nd miku PM figure' ],
-	[ 'x287774', 'f7c92', 'knockoff good smile umaru-chan nendoroid #524' ],
-	[ 'x26113', 'a69e3', 'knockoff good smile snow miku nendoroid #150' ],
-	[ '198604', '64215', 'sega project diva 2nd miku PM figure' ],
-	[ '47413', 'd5289', 'banpresto akira kogami ichiban kuji H prize kyun-chara' ],
+	[ '1495055', 'eda04', 'bandai q posket miku v4x type a (2022)' ],
+	[ '1796930', '5b192', 'max limited yurayura head miku nt (2023)' ],
+	[ '1796928', '82839', 'max limited yurayura head miku (2023)' ],
+	[ 'p1473760', 'fe3fe', 'good smile inugami korone nendoroid #1861 (2022)' ],
+	[ 'p1473759', '82d19', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
+	[ 'p1782785', '17fdb', 'furyu exceed creative miku cyber future ver. (2023)' ],
+	[ 'p1618453', 'f7702', 'good smile pop up parade needy girl overdose kangel (2023)' ],
+	[ 'p1780064', 'bf4ff', 'taito miku artist masterpiece+ birthday 2023 ver. (2023)' ],
+	[ 'p1873722', '8bef1', 'taito miku fashion figure uniform ver. (2024)' ],
+	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper (2023)' ],
+	[ 'p945860', '328b2', 'good smile miku nendoroid doll (2020)' ],
+	[ '1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll (2023)' ],
+	[ '1616455', '1154b', 'good smile pop up parade ver. L DECO*27 vampire miku (2023)' ],
+	[ 'p1779734', '8e024', 'taito miku fashion figure subculture ver. (2023)' ],
+	[ '1335582', '0d57a', 'sega sakura miku v3 SPM (2022)' ],
+	[ '1571286', '62065', 'sega miku christmas 2022 SPM (2022)' ],
+	[ '1479579', '350f9', 'sega miku 15th anniversary kei ver. SPM (2022)' ],
+	[ '1549222', '43de2', 'sega miku 15th anniversary zhou ver. SPM (2022)' ],
+	[ '1376115', '30a86', 'good smile racing AMG 2021 SUPER GT round 3 1/64 scale diecast car (2022)' ],
+	[ '1275355', '94c12', 'sega preciality special nuigurumi sakura miku (2022)' ],
+	[ '1213389', '85cfa', 'good smile genshin impact venti nendoroid #1795 (2022)' ],
+	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701 (2022)' ],
+	[ '1662862', '12eb0', 'moeyu miku embroidered blanket hoodie (2022)' ],
+	[ '1499800', '04668', 'taito miku artist masterpiece latidos 2022 ver. (2022)' ],
+	[ '1220581', '696bc', 'taito miku artist masterpiece pricess arabian ver. (2021)' ],
+	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel (2021)' ],
+	[ 'x314683', 'e7d29', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap) (2015)' ],
+	[ 'x370088', '27dfa', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush (2016)' ],
+	[ 'x514129', '00fa6', 'knockoff sega nyanko miku fuwafuwa nuigurumi plush (2017)' ],
+	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure (2019)' ],
+	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014 (2008)' ],
+	[ '401018', 'bfb66', 'sega project diva innocent SPM miku (2016)' ],
+	[ '718192', '29017', 'hatsune miku 2nd season Winter ver. (2018)' ],
+	[ '1251026', 'e36e0', 'bandai q posket miku type a (2021)' ],
+	[ '944728', 'c98b0', 'furyu miku bicute bunnies original ver. (2020)' ],
+	[ '1311067', '82a91', 'taito miku artist masterpiece princess alice (2022)' ],
+	[ '1141381', 'fe94b', 'taito miku artist masterpiece birthday 2021 (14th anniv.) (2021)' ],
+	[ '1293291', 'c95e9', 'furyu sakura miku noodle stopper (2022)' ],
+	[ '886807', '5b4b2', 'taito sakura miku 2020 ver. (2020)' ],
+	[ '1216990', '90105', 'bandai espresto racing miku 2020 (2021)' ],
+	[ '1035745', 'ba361', 'sega project diva mega 39\'s breathe you miku SPM (2021)' ],
+	[ '1112719', '82ba8', 'taito miku big nuigurumi plush (2021)' ],
+	[ '756832', 'd4634', 'taito hatsune miku 2nd season Spring ver. (2019)' ],
+	[ '776143', '679aa', 'taito hatsune miku 2nd season Summer ver. (2019)' ],
+	[ '4741', '3b1b2', 'sega hatsune miku EX figure (2008)' ],
+	[ '1631369', '25b00', 'sega smiling miku nesoberi nuigurumi (strap) (2016)' ],
+	[ '798190', 'f61e7', 'sega sakura miku SPM (2019)' ],
+	[ '720383', '21905', 'sega fate/extella link astolfo SPM (2018)' ],
+	[ '693275', 'f40e6', 'sega CHANxCO miku mega jumbo nuigurumi plush (2018)' ],
+	[ '675904', '1161e', 'good smile gochiusa kirima sxarp nendoroid #929 (2018)' ],
+	[ '689123', '2750f', 'good smile snow princess miku nendoroid #1000 (2019)' ],
+	[ '464596', 'd0803', 'good smile konosuba megumin nendoroid #725 (2017)' ],
+	[ '440687', 'be7e3', 'sega project diva X miku SPM (2016)' ],
+	[ '583734', 'ccf32', 'sega touhou project izayoi sakuya PM figure (2017)' ],
+	[ '200768', '28f48', 'funko pop rocks miku #039 (2014)' ],
+	[ '246546', '9cbfc', 'sega project diva F2nd miku PM figure (2015)' ],
+	[ 'x287774', 'f7c92', 'knockoff good smile umaru-chan nendoroid #524 (2015)' ],
+	[ 'x26113', 'a69e3', 'knockoff good smile snow miku nendoroid #150 (2010)' ],
+	[ '198604', '64215', 'sega project diva 2nd miku PM figure (2014)' ],
+	[ '47413', 'd5289', 'banpresto akira kogami ichiban kuji H prize kyun-chara (2010)' ],
 	[ '167123', '00cd8', 'sega project diva arcade miku PM figure (2012)' ],
 	[ '100292', '0bb7d', 'great eastern entertainment hatsune miku plush (2012)' ],
-
-	/* they're not hard to find but some of them are expensive */
-	[ 'w66010', 'e028f', 'good smile miku support ver. nendoroid #170' ],
-	[ 'w370088', '27dfa', 'sega miku fuwafuwa mega jumbo nuigurumi plush' ],
-	[ 'w451821', '07e74', 'good smile hatsune miku (2.0) nendoroid JUMBO (2016)' ],
-	[ 'w945858', 'b91b5', 'good smile hatsune miku v4x nendoroid #1309' ],
-	[ 'w1085480', 'f2b12', 'furyu f:nex miku nekomimi headphove ver. 1/7 scale' ],
-	[ 'w198011', '69a8c', 'max factory project diva 2nd mikuzukin miku 1/7 scale' ],
-	[ 'w236245', '829af', 'good smile tell your world miku 1/8 scale' ],
-	[ 'w78591', '17fbf', 'max factory miku 1/7 scale HSP ver. (2012)' ],
+	[ 'w66010', 'e028f', 'good smile miku support ver. nendoroid #170 (2011)' ],
+	[ 'w370088', '27dfa', 'sega fuwafuwa mega jumbo miku plush (2016)' ],
+	[ 'w451821', '07e74', 'good smile hatsune miku nendoroid JUMBO (2016)' ],
+	[ 'w945858', 'b91b5', 'good smile hatsune miku v4x nendoroid #1309 (2020)' ],
+	[ 'w1085480', 'f2b12', 'furyu f:nex miku nekomimi headphove ver. 1/7 scale (2022)' ],
+	[ 'w198011', '69a8c', 'max factory project diva 2nd mikuzukin miku 1/7 scale (2015)' ],
+	[ 'w236245', '829af', 'good smile tell your world miku 1/8 scale (2015)' ],
+	[ 'w78591', '17fbf', 'max factory miku HSP ver. 1/7 scale (2012)' ],
 ];
 
 var thumbs = document.getElementById('fig-thumbs');
