misc/last-fm: Found more bits and pieces of my last.fm profile
Includes userscripts previously thought to be lost

--- a/misc/last-fm.htm
+++ b/misc/last-fm.htm
@@ -34,6 +34,7 @@
 		a { color: #0187C5; text-decoration: none; }
 		a:hover { text-decoration: underline; }
 		.boxquote { background: #F5F5F5; border: #CCC 1px solid; padding: 5px; margin: 5px; }
+		.greentext { line-height: 15px; color: #789922; font-size: 16px; background-color: #eef2ff; padding: 7px; }
 	</style>
 </head>
 <body>
@@ -44,7 +45,7 @@
 	</a>
 	<h2>My Last.fm Profile (2012-2015)</h2>
 	<p>Back in the days when Last.fm allowed profile customization and befriending others, I listened to far more music than I do now. I didn't know HTML but I would always customize up my Last.fm sidebar in BBcode.</p>
-	<p>This was the closest thing I had to a website at the time, so I made this mural/collage with period-correct bits and pieces that I could still salvage from the <a href="https://archive.org">Internet Archive</a> at different points in time, I hope you'll indulge me while I try to rekindle faded memories for a bit.</p>
+	<p>This was the closest thing I had to a website at the time, so I made this mural/collage with period-correct bits and pieces that I could still salvage from the <a href="https://archive.org">Internet Archive</a> at different points in time, I hope you'll indulge me while I try to rekindle some <strike>painful</strike> faded memories.</p>
 	<p><sup>bgm: Acetantina / Temple of Null (2020) / 02. Diet Meth</sup></p>
 	<iframe height="100" src="https://www.youtube.com/embed/Ofj1GBd0-fE?autoplay=1&amp;start=242" frameborder="0"></iframe>
 </div>
@@ -109,7 +110,7 @@
 			last.fm greasemonkey scripts for <span style="font-size: 16px;">happy</span> feelings
 			<img src="last-fm-res/sweat.gif" />
 			</em>
-			<a href="/lost">last.fm + /mu/ integration script</a> | <a href="/lost">last.fm compatibility percentages</a>
+			<a href="last-fm-res/Last_fm_mu_script.user.js.zip">last.fm + /mu/ integration script</a> | <a href="last-fm-res/Last_fm_compatiblity_percents.user.js.zip">last.fm compatibility percentages</a> | <a href="last-fm-res/Last_fm_average_per_day.user.js.zip">last.fm fetch average tracks per day</a>
 			<br/>
 			<img src="last-fm-res/warning.gif" />
 			<a href="/lost">last.fm fetch taste-o-meter ratings</a> (WARNING: Slows down browser.)
@@ -166,8 +167,10 @@
 	<center><img src="last-fm-res/lifelike-texture.gif" /></center>
 
 	<div class="boxquote">
+	<a href="https://web.archive.org/web/20150510225104/http://www.last.fm/group/Boys+who+want+to+dress+up+as+schoolgirls+and+be+dominated">
 	<center><img src="last-fm-res/last-fm-miku.jpg" /></center>
-	<h1>Only <span style="color: #CCC;">redacted</span>s who want to dress up like schoolgirls and be dominated are allowed to post in this thread.</h1>
+	<h1>Only <span style="color: #CCC;">boys</span> who want to dress up like schoolgirls and be dominated are allowed to post in this thread.</h1>
+	</a>
 	</div>
 
 	<center><img src="last-fm-res/brainwasher.gif" /></center>
@@ -227,7 +230,7 @@
 			last.fm greasemonkey scripts for <span style="font-size: 16px;">happy</span> feelings
 			<img src="last-fm-res/sweat.gif" />
 			</em>
-			<a href="/lost">last.fm + /mu/ integration script</a> | <a href="/lost">last.fm compatibility percentages</a>
+			<a href="last-fm-res/Last_fm_mu_script.user.js.zip">last.fm + /mu/ integration script</a> | <a href="last-fm-res/Last_fm_compatiblity_percents.user.js.zip">last.fm compatibility percentages</a> | <a href="last-fm-res/Last_fm_average_per_day.user.js.zip">last.fm fetch average tracks per day</a>
 			<br/>
 			<img src="last-fm-res/warning.gif" />
 			<a href="/lost">last.fm fetch taste-o-meter ratings</a> (WARNING: Slows down browser.)
@@ -263,8 +266,10 @@
 	<center><img src="last-fm-res/nbc2.gif" /></center>
 
 	<div class="boxquote">
-	<h1 style="transform: scale(-1, -1);">Only <span style="color: #CCC;">redacted</span>s who want to dress up like schoolgirls and be dominated are allowed to post in this thread.</h1>
+	<a href="https://web.archive.org/web/20150516133133/http://www.last.fm/group/I+fall+in+luv+with+lastfm+users+based+on+their+anime+avatars">
+	<h1 style="transform: scale(-1, -1);">Only <span style="color: #CCC;">boys</span> who fall in luv with lastfm users based on their anime avatars are allowed to post in this thread.</h1>
 	<center><img src="last-fm-res/do-not-sexualize-miku.jpg" /></center>
+	</a>
 	</div>
 
 	<center><img src="last-fm-res/waves.gif" /></center>
@@ -273,6 +278,13 @@
 	<center><img src="last-fm-res/abstract5.gif" /></center>
 	<center><img src="last-fm-res/bokura-no-war-game2.gif" /></center>
 	<br/>
+
+	<p class="greentext">
+	&gt;there are people who scrobble over 400 tracks per day on last.fm<br/>
+	&gt;there are people who manually scrobble music with Universal Scrobbler<br/>
+	&gt;there are people who can't bear the idea of their music listening not being archived<br/>
+	&gt;there are people who listen to music as 2.0x speed to burn through more music in less time<br/>
+	&gt;there are people who care more about enhancing their last.fm epeen than actually listening to music</p>
 	<h1 style="transform: rotate(-13deg);"><em>"one day i fell out of love with the act of discovering, collecting and listening to music, i couldn't imagine why~"</em></h1>
 
 	<sup><strike>it was a long time before i learned to love music again</strike></sup>
@@ -286,14 +298,17 @@
 
 	<div class="split">
 	<strong class="heading">About Me</strong>
-	<center><img src="last-fm-res/miku-dansu.gif" /></center>
+	<br/>
+	<br/>
+	<div align="left" style="font-size: 50px; line-height: 25px;"><i>DO YOU LIKE <span style="color: #FAA5C9;">FLOWER</span> MUSIC?</i></div>
+	<center><a href="https://boards.4channel.org/mu/catalog#s=last.fm"><img src="last-fm-res/miku-dansu.gif" /></a></center>
 
-	<center><sup><em>close your eyes and you'll leave this dream<img src="last-fm-res/doki.gif" /></em></sup></center>
+	<div align="right"><sup><em>close your eyes and you'll leave this dream<img src="last-fm-res/doki.gif" /></em></sup></div>
 	
 	<center><img src="last-fm-res/ds-lite.gif" /></center>
 	<center>
 		<sup>
-			<a href="/lost">i could finish my backlog if i stayed up for <span style="font-size: 20px;">40.05</span> days straight</a>
+			<a href="/lost">i could finish my backlog if i stayed up for <span style="font-size: 20px;">43.08</span> days straight</a>
 			<img src="last-fm-res/doki2.gif" />
 		</sup>
 	</center>
@@ -325,7 +340,7 @@
 			last.fm greasemonkey scripts for <span style="font-size: 16px;">happy</span> feelings
 			<img src="last-fm-res/sweat.gif" />
 			</em>
-			<a href="/lost">last.fm + /mu/ integration script</a> | <a href="/lost">last.fm compatibility percentages</a>
+			<a href="last-fm-res/Last_fm_mu_script.user.js.zip">last.fm + /mu/ integration script</a> | <a href="last-fm-res/Last_fm_compatiblity_percents.user.js.zip">last.fm compatibility percentages</a> | <a href="last-fm-res/Last_fm_average_per_day.user.js.zip">last.fm fetch average tracks per day</a>
 			<br/>
 			<img src="last-fm-res/warning.gif" />
 			<a href="/lost">last.fm fetch taste-o-meter ratings</a> (WARNING: Slows down browser.)
@@ -340,6 +355,7 @@
 		<img src="last-fm-res/miku-nendo.png" />
 		<br/>
 		<img src="last-fm-res/shelf.png" />
+		<img src="last-fm-res/mal-signature.png" />
 	</center>
 	<center><br/><img src="last-fm-res/separator.gif" /><br/></center>
 	<center><a href="/lost"><img src="last-fm-res/vaporwaves.png" /></a></center>
@@ -350,6 +366,7 @@
 		<center><img src="last-fm-res/omori3.gif" /></center>
 	</a>
 	<center><img src="last-fm-res/sakura.gif" /></center>
+	<div align="right"><sup>💔💔💔💔💔💔💔💔💔💔💔💔 <i>i still hate you, last.fm</i></sup></div>
 	</div>
 
 </div>
