notes/figures: july boated amiami orders arrived

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/9/17 -->
+<!-- updated 2023/9/25 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌕 Sun, Sep 17th, 2023</p>
+<p>Last updated 🌘 Mon, Sep 25th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -170,19 +170,19 @@ var figs = [
 	[ 'p1849001', '3fba5', 'gift hatsune miku nt fumo plush (2023)' ],
 	[ 'p1876348', '49ca1', 'good smile miku 16th birthday ~dear creators~ nendoroid #2222 (2023)' ],
 	[ 'p1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
-	[ 'p1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale (2022)' ],
-	[ 'p926772', '68615', 'good smile racing miku 2020 nendoroid #1293 (2020)' ],
-	[ 'p1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
-	[ 'p998275', 'e47b6', 'taito miku 3rd season autumn ver. (2020)' ],
-	[ 'p144335', '72a4a', 'max factory figma miku 2.0 #200 (2013)' ],
-	[ 'p604387', '623bc', 'good smile miku 10th anniv. ver. nendoroid #831 (2018)' ],
-	[ 'p12040', '74b0d', 'good smile hatsune miku CM ver. 1/8 scale (2009)' ],
-	[ 'p29253', '8664a', 'max factory miku tony ver. 1/7 scale (2011)' ],
-	[ 'p186', '94494', 'good smile miku nendoroid #33 (2008)' ],
-	[ 'p136444', '8be06', 'good smile miku 2.0 nendoroid #300 (2013)' ],
-	[ 'p61333', '3b529', 'good smile miku 1/8 scale lat-type ver. (2011)' ],
-	[ 'p548722', '507c3', 'good smile hatsune miku v4x 1/8 scale (2018)' ],
-	[ 'p187', '7888c', 'good smile hatsune miku 1/8 scale (2008)' ],
+	[ '1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale (2022)' ],
+	[ '926772', '68615', 'good smile racing miku 2020 nendoroid #1293 (2020)' ],
+	[ '1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
+	[ '998275', 'e47b6', 'taito miku 3rd season autumn ver. (2020)' ],
+	[ '144335', '72a4a', 'max factory figma miku 2.0 #200 (2013)' ],
+	[ '604387', '623bc', 'good smile miku 10th anniv. ver. nendoroid #831 (2018)' ],
+	[ '12040', '74b0d', 'good smile hatsune miku CM ver. 1/8 scale (2009)' ],
+	[ '29253', '8664a', 'max factory miku tony ver. 1/7 scale (2011)' ],
+	[ '186', '94494', 'good smile miku nendoroid #33 (2008)' ],
+	[ '136444', '8be06', 'good smile miku 2.0 nendoroid #300 (2013)' ],
+	[ '61333', '3b529', 'good smile miku 1/8 scale lat-type ver. (2011)' ],
+	[ '548722', '507c3', 'good smile hatsune miku v4x 1/8 scale (2018)' ],
+	[ '187', '7888c', 'good smile hatsune miku 1/8 scale (2008)' ],
 	[ 'p546853', 'be182', 'bandai figure-rise bust miku model kit (2017)' ],
 	[ 'p1875244', '2f1ce', 'furyu noodle stopper miku autumn date (2023)' ],
 	[ 'p1840070', 'c98a3', 'good smile needy girl overdose kangel nendoroid #2201 (2023)' ],
