notes/useful-links: Added 2 new bookmarks

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/8/14 -->
+<!-- updated 2023/9/27 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -180,6 +180,16 @@
 <li><em>Near-live weather animations from US NOAA weather satellites.</em></li>
 </ul>
 </li>
+<li><a href="https://www.cpubenchmark.net/singleCompare.php">PassMark CPU Benchmarks</a>
+<ul>
+<li><em>Compare CPU single and multi-threaded performance for CPUs released since 1999.</em></li>
+</ul>
+</li>
+<li><a href="https://st.ayaka.one/">Project Sekai Stickers</a>
+<ul>
+<li><em>Create your own messenger emotes/stickers based on those found in mobile rhythm gacha <a href="https://projectsekai.fandom.com/wiki/Project_SEKAI_COLORFUL_STAGE!">Project SEKAI</a>.</em></li>
+</ul>
+</li>
 <li><a href="https://hikaku-sitatter.com/en/">hikaku sitatter</a>
 <ul>
 <li><em>Estimate and compare heights of real people and/or fictional characters.</em></li>
@@ -236,7 +246,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌕 Mon, Aug 14th, 2023</p>
+Updated 🌑 Wed, Sep 27th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
