notes/figures: Added miku diorama trading fig set

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/9/25 -->
+<!-- updated 2023/9/30 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌘 Mon, Sep 25th, 2023</p>
+<p>Last updated 🌑 Sat, Sep 30th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -224,6 +224,7 @@ var figs = [
 	[ 'x370088', '27dfa', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush (2016)' ],
 	[ 'x514129', '00fa6', 'knockoff sega nyanko miku fuwafuwa nuigurumi plush (2017)' ],
 	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure (2019)' ],
+	[ '1536233', '7215f', 're-ment miku miku room miniature diorama trading fig 8/8 set (2022)' ],
 	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014 (2008)' ],
 	[ '401018', 'bfb66', 'sega project diva innocent SPM miku (2016)' ],
 	[ '718192', '29017', 'hatsune miku 2nd season Winter ver. (2018)' ],
