notes/gpus: Wow a whole new LP card after a whole year of nothing

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2022/10/22 -->
+<!-- updated 2023/10/2 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌔 Sat, Oct 22nd, 2022.</p>
+<p>Last updated 🌑 Mon, Oct 2nd, 2023.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 As far as discrete graphics go, these are the most space and energy-efficient GPUs that money can buy, ideal for use in space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, and other niche form-factors where size and/or power is a constraining factor.
@@ -401,9 +401,16 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <tr>
 <td style="text-align: left">Nvidia RTX A2000</td>
 <td style="text-align: center">2021</td>
-<td style="text-align: center"><em>N/A</em></td>
-<td style="text-align: center">13228</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">13825</td>
 <td style="text-align: left">Workstation card.</td>
+</tr>
+<tr>
+<td style="text-align: left">Nvidia GeForce RTX 4060</td>
+<td style="text-align: center">2023</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">19444</td>
+<td style="text-align: left">Listed at 115W, available in 75W low profile.</td>
 </tr>
 </tbody>
 </table>
