[microsounds@shami] 2 changes 2023/11/20 11:20am PST

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -144,7 +144,11 @@
 </li>
 <li><a href="https://chromestatus.com/roadmap">Chrome Platform Roadmap</a></li>
 <li><a href="https://chromiumdash.appspot.com/serving-builds?deviceCategory=ChromeOS">Chromebook Board Names</a></li>
-<li><a href="https://mrchromebox.tech/#devices">MrChromebox: Supported Devices</a></li>
+<li><a href="https://mrchromebox.tech/#devices">MrChromebox: Supported Devices</a>
+<ul>
+<li><em>List of x86 Chromebook hardware that can be reflashed with Coreboot to support any UEFI-compliant OS.</em></li>
+</ul>
+</li>
 <li><a href="https://www.mattmillman.com/info/crimpconnectors">Crimp/Jumper Connector Names</a>
 <ul>
 <li><em>Standard names for breadboard jumpers and crimp connections.</em></li>
